--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "element-ui": "^2.15.1",
     "moment": "^2.29.1",
+    "pubsub-js": "^1.9.3",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
