移动修改目录名称

--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "babel-polyfill": "^6.26.0",
+    "classlist-polyfill": "^1.2.0",
     "element-ui": "^2.15.1",
     "moment": "^2.29.1",
     "pubsub-js": "^1.9.3",
