--- a/package.json
+++ b/package.json
@@ -15,10 +15,14 @@
     "babel-polyfill": "^6.26.0",
     "classlist-polyfill": "^1.2.0",
     "element-ui": "^2.15.1",
+    "less": "^3.9.0",
+    "less-loader": "^5.0.0",
     "moment": "^2.29.1",
+    "nprogress": "^0.2.0",
     "pubsub-js": "^1.9.3",
     "vue": "^2.5.2",
-    "vue-router": "^3.5.1"
+    "vue-router": "^3.5.1",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
